SqlGen tests green